# Hustlers_icp

./: .flutter-plugins  .flutter-plugins-dependencies  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: FadeAnimation.dart  main.dart
lib/Assistance/: assistance_method.dart  request_assistant.dart
lib/Global/: firestor.dart  global.dart  map_key.dart
lib/Model/: add_list.dart  directions.dart  user_model.dart
lib/Onboarding/: onboarding_info.dart  onboarding_items.dart  onboarding_view.dart
lib/Screen/: about_screen.dart  deposit_screen.dart  drawer_screen.dart  edit_screen.dart  forgot_password_screen.dart  get_hustler_screen.dart  login_screen.dart  main_screen.dart  my _list_screen.dart  precise_pickup_location.dart  profile_screen.dart  registration_screen.dart  search_places_screen.dart  wallet_screen.dart
lib/Splashscreen/: splash_screen.dart
lib/Themeprovider/: theme_provider.dart
lib/Widget/: place_prediction_tile.dart  progress_dialog.dart  stream_note.dart  task_widgets.dart
lib/cont/: color.dart
lib/infoHandler/: app_info.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
src/user_auth/: Cargo.toml  user_auth.did
src/user_auth/src/: lib.rs
web/: index.html
windows/: CMakeLists.txt
(+175 files in other folders)
